--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,6 @@ cache:
     - node_modules
 
 script:
-  - ng build --prod
+  - ng test
 
 
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: true
-  local-dir: ./dist/
-  on:
