--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,13 @@ addons:
 
 before_script:
   - yarn global add @angular/cli
-
+before_install:
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+before_script:
+   - "sudo chown root /opt/google/chrome/chrome-sandbox"
+   - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
 cache:
   yarn: true
   directories:
